# llp

./: CMakeLists.txt  Makefile  README.md  alloc.c  alloc.h  client.c  client.h  fileStruct.c  fileStruct.h  main.c  parser.c  parser.h  reader.c  reader.h  server.c  server.h  test.c  transport.h  xml.c  xml.h
отчеты/: llp1.docx  llp2.docx  llp3.docx
